kubernetes/apps/gdd-service/inventree/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventree
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "3D Printing"
    gethomepage.dev/name: InvenTree
    gethomepage.dev/icon: inventree.svg
    gethomepage.dev/description: "Tailscale only | Inventory management"
    gethomepage.dev/siteMonitor: "http://inventree.gdd-service.svc:8000"
spec:
  ingressClassName: tailscale
  rules:
    - host: inventree.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventree
                port:
                  number: 8000
  tls:
    - hosts:
        - inventree.barn-walleye.ts.net
